force-app/main/default/objects/QuizQuestion__c/QuizQuestion__c.object-meta.xml
<CustomObject>
    <label>QuizQuestion</label>
    <nameField>
        <displayFormat>Que-{0000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuizQuestions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>