force-app/main/default/objects/QuizQuestion__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option_A</fullName>
            </value>
            <value>
                <fullName>Option_B</fullName>
            </value>
            <value>
                <fullName>Option_C</fullName>
            </value>
            <value>
                <fullName>Option_D</fullName>
            </value>
            <value>
                <fullName>Option_E</fullName>
            </value>
            <value>
                <fullName>Option_F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>