force-app/main/default/objects/QuizQuestion__c/fields/Option_A__c.field-meta.xml
<CustomField>
    <fullName>Option_A__c</fullName>
    <label>Option_A</label>
    <length>100</length>
    <type>Text</type>
</CustomField>