force-app/main/default/objects/QuizQuestion__c/fields/Option_B__c.field-meta.xml
<CustomField>
    <fullName>Option_B__c</fullName>
    <label>Option_B</label>
    <length>100</length>
    <type>Text</type>
</CustomField>