force-app/main/default/objects/QuizQuestion__c/fields/Option_C__c.field-meta.xml
<CustomField>
    <fullName>Option_C__c</fullName>
    <label>Option_C</label>
    <length>100</length>
    <type>Text</type>
</CustomField>