force-app/main/default/objects/QuizQuestion__c/fields/Option_D__c.field-meta.xml
<CustomField>
    <fullName>Option_D__c</fullName>
    <label>Option_D</label>
    <length>100</length>
    <type>Text</type>
</CustomField>