force-app/main/default/objects/QuizQuestion__c/fields/Option_E__c.field-meta.xml
<CustomField>
    <fullName>Option_E__c</fullName>
    <label>Option_E</label>
    <length>100</length>
    <type>Text</type>
</CustomField>