force-app/main/default/objects/QuizQuestion__c/fields/Option_F__c.field-meta.xml
<CustomField>
    <fullName>Option_F__c</fullName>
    <label>Option_F</label>
    <length>100</length>
    <type>Text</type>
</CustomField>