force-app/main/default/objects/QuizQuestion__c/fields/QuizTestName__c.field-meta.xml
<CustomField>
    <fullName>QuizTestName__c</fullName>
    <label>QuizTest</label>
    <referenceTo>QuizTest__c</referenceTo>
    <relationshipLabel>QuizQuestions</relationshipLabel>
    <relationshipName>QuizQuestions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>